i#64 replace deprecated methods
add @Deprecated annotations
add exception catch clauses